# agentic-quant-lab

./: README.md  pyproject.toml
docs/: upstream-learning.md
docs/adr/: 0001-research-only-boundary.md  0002-walk-forward-and-cost-model.md  0003-volatility-target-sizing.md  0004-risk-adjusted-metrics.md  0005-benchmark-relative-reporting.md  0006-research-execution-boundary-enforcement.md  0007-slippage-model-variants.md
src/agentic_quant_lab/: __init__.py  backtest.py  benchmark.py  boundary.py  cli.py  costs.py  data.py  metrics.py  planner.py  risk.py  sizing.py  slippage.py  sweep.py  walk_forward.py
tests/: test_benchmark.py  test_boundary.py  test_metrics.py  test_quant_lab.py  test_slippage.py  test_sweep.py
tests/fixtures/: metrics_returns.json
