[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agentic-quant-lab"
version = "0.1.0"
description = "Agentic quantitative research lab with risk guardrails and reproducible backtests."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.26",
  "pandas>=2.2",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
]

[project.scripts]
agentic-quant-lab = "agentic_quant_lab.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]

